--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^0.17.0",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.1",
+    "json-loader": "^0.5.2",
     "jsx-loader": "^0.13.2",
     "react": "^0.13.3",
     "react-hot-loader": "^1.3.0",
